--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.3.0",
+    "@types/mustache": "^4.2.5",
     "@types/node": "^22.13.5",
     "@vitest/coverage-v8": "^3.0.6",
     "eslint": "^9.21.0",
@@ -33,5 +34,6 @@
     "tsx": "^4.19.3",
     "typescript": "^5.7.3",
     "vitest": "^3.0.6"
-  }
+  },
+  "packageManager": "pnpm@8.7.6+sha1.a428b12202bc4f23b17e6dffe730734dae5728e2"
 }
