--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "dev": "tsx --watch src/index.ts"
   },
   "dependencies": {
+    "@fastify/http-proxy": "^11.0.1",
     "@fastify/sensible": "^6.0.3",
     "fastify": "^5.2.1",
     "fastify-plugin": "^5.0.1",
+    "maildev": "^2.2.1",
     "mustache": "^4.2.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.3.0",
+    "@types/maildev": "^0.0.7",
     "@types/mustache": "^4.2.5",
     "@types/node": "^22.13.5",
     "@vitest/coverage-v8": "^3.0.6",
