--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "fastify-plugin": "^5.0.1",
     "maildev": "^2.2.1",
     "mustache": "^4.2.0",
+    "nodemailer": "^6.10.0",
+    "pino-pretty": "^13.0.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -30,13 +32,13 @@
     "@types/maildev": "^0.0.7",
     "@types/mustache": "^4.2.5",
     "@types/node": "^22.13.5",
+    "@types/nodemailer": "^6.4.17",
     "@vitest/coverage-v8": "^3.0.6",
     "eslint": "^9.21.0",
-    "pino-pretty": "^13.0.0",
     "tsup": "^8.3.6",
     "tsx": "^4.19.3",
     "typescript": "^5.7.3",
     "vitest": "^3.0.6"
   },
-  "packageManager": "pnpm@8.7.6+sha1.a428b12202bc4f23b17e6dffe730734dae5728e2"
+  "packageManager": "pnpm@9.5.0"
 }
